--- a/views/layout.erb
+++ b/views/layout.erb
@@ -9,7 +9,7 @@
         <title>Is it Open NYC</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" type="text/css" href="<%=url('/stylesheets/style.css')%>">
+        <link rel="stylesheet" type="text/css" href="<%=url('/css/blockstyle.css')%>" />
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     </head>
     <body>
