--- a/views/index.erb
+++ b/views/index.erb
@@ -4,10 +4,12 @@
 		<div>
 			<h3><%=museum.name%></h3>
 			</br>
-			<h2><%=museum.current_status%></h2>
+			<h2 class="<%=museum.current_status%>"><%=museum.current_status%></h2>
 			<br>
 			<p><%=museum.today_schedule%></p>
 		</div>
 	</a>
 <%end%>
+
+
 
